# Effects-Test

./: .gitmodules
pico/pico/: CMakeLists.txt  pico.cpp
pico/pico/.cache/clangd/index/: pico.cpp.20E8E042CE381CEC.idx
pico/pico1/: CMakeLists.txt  pico1.cpp
pico/pico1/.cache/clangd/index/: pico1.cpp.33F3103962C6DFA4.idx
src/: main.py
